Attempt to fix IOS spacing

--- a/styles/home.css
+++ b/styles/home.css
@@ -18,7 +18,7 @@
   margin-left: 10vw;
   grid-column: 1;
   z-index: 1;
-  margin-top: 10vw;
+  margin-top: 5vw;
 }
 .home-text p {
   opacity: 0.7;
